tests/ui/extern/issue-36122-accessing-externed-dst.stderr
error[E0277]: the size for values of type `[usize]` cannot be known at compilation time
  --> $DIR/issue-36122-accessing-externed-dst.rs:3:9
   |
LL |         static symbol: [usize];
   |         ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[usize]`
   = note: statics and constants must have a statically known size

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-36122-accessing-externed-dst.rs:5:20
   |
LL |     println!("{}", symbol[0]);
   |                    ^^^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0133, E0277.
For more information about an error, try `rustc --explain E0133`.
